--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,1 +1,15 @@
+* {
+    font-family: "Teko", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
 
+.listHome {
+    margin: 50px;
+}
+
+.listHome h2 {
+    font-size: 45px;
+    margin-top: 15px;
+}
